# market

./: .gitignore  pyproject.toml  requirements.txt  schema.txt  wsgi.py
instance/: app.db
migrations/versions/: 27abd198430f_.py  2b3e0911fc09_.py  412446f3c449_.py  7f058197e57c_.py  7f28531e7368_add_note.py  9d3ab3248ef6_item_updates.py  b5ed0a8a8407_initial.py  cb35734e69b0_item_abbreviations.py  cec5560018d0_.py  e3ee326f96b8_item_updates.py
tests/: base.py  loader.py
upstream/: __init__.py  charts.py  extensions.py  models.py  schemas.py  utils.py  wrappers.py
upstream/blueprints/: event.py  home.py  item.py  transaction.py  user.py
upstream/static/: manifest.json
upstream/static/css/: main.css
upstream/static/js/: main.js
upstream/templates/: _layout.html
upstream/templates/events/: index.html
upstream/templates/events/partials/: event-item-table.html  event-table.html
upstream/templates/forms/: create-event-note.html  create-event.html  create-inventory.html  create-item.html  delete-item.html  edit-inventory.html  edit-item.html
upstream/templates/home/: index-htmx.html  index.html  login-htmx.html  login.html  register.html
upstream/templates/items/: index.html  item-detail.html  items-table.html
upstream/templates/sales/: index.html
upstream/templates/sales/partials/: sale-form.html
upstream/templates/shared/: layout-wrap.html
upstream/templates/shared/partials/: header.html  mobile-create.html  nav.html  search.html  sidebar.html
