[tool.poetry]
name = "upstream"
version = "0.1.0"
description = ""
authors = ["bennettscience <brian.bennett2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.1"
Flask-Login = "^0.6.2"
python-dotenv = "^0.21.0"
jinja-partials = "^0.1.1"
htmx-flask = "^0.1.0"
flask-marshmallow = "^0.14.0"
webargs = "^8.2.0"
matplotlib = "^3.6.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
Flask-Migrate = "^3.1.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
